--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^1.7.9",
     "jspdf": "^2.5.2",
+    "lucide": "^0.475.0",
+    "lucide-react": "^0.475.0",
     "next": "^15.1.7",
     "openai": "^4.85.1",
     "react": "^19.0.0",
